fix #16 improve scrollbar style

--- a/src/code/base.css
+++ b/src/code/base.css
@@ -235,8 +235,8 @@ html[data-theme='dark'] {
     --ls-page-blockquote-border-color: var(--ls-border-color);
     --ls-page-inline-code-color: hsl(var(--cl-primary));
     --ls-page-inline-code-bg-color: hsl(var(--cl-primary), 0.1);
-    --ls-scrollbar-foreground-color: hsl(var(--cl-background), 0.4);
-    --ls-scrollbar-background-color: hsl(var(--cl-text-color), 0);
+    --ls-scrollbar-foreground-color: hsl(var(--cl-primary), 0.4);
+    --ls-scrollbar-background-color: hsl(var(--ls-secondary-background-color));
     --ls-scrollbar-thumb-hover-color: hsl(var(--cl-primary));
     --ls-head-text-color: var(--ls-link-text-color);
     --ls-cloze-text-color: hsl(var(--cl-primary));
@@ -364,8 +364,8 @@ html[data-theme='light'] {
     --ls-page-blockquote-border-color: var(--ls-border-color);
     --ls-page-inline-code-color: hsl(var(--cl-primary));
     --ls-page-inline-code-bg-color: hsl(var(--cl-primary), 0.1);
-    --ls-scrollbar-foreground-color: hsl(var(--cl-background), 0.5);
-    --ls-scrollbar-background-color: hsl(var(--cl-text-color), 0);
+    --ls-scrollbar-foreground-color: hsl(var(--cl-primary), 0.4);
+    --ls-scrollbar-background-color: hsl(var(--ls-secondary-background-color));
     --ls-scrollbar-thumb-hover-color: hsl(var(--cl-primary));
     --ls-head-text-color: var(--ls-link-text-color);
     --ls-cloze-text-color: hsl(var(--cl-primary));
